tests/baselines/reference/parserVariableDeclaration6.errors.txt
==== tests/cases/compiler/parserVariableDeclaration6.ts (1 errors) ====
    var
    ~~~
!!! parserVariableDeclaration6.ts(1,1): error TS1097: 'variable declaration' list cannot be empty.